Set up core folder